--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,29 @@ body, html {
 .active {
     display: block;
 }
+/*Video Responsive*/
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 45%; /* Relación de aspecto 16:9 */
+    height: 0;
+    overflow: hidden;
+  }
+  
+  .video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+/*Video*/
+  video {
+    
+    object-fit: cover; /* Ajusta el video para que cubra el área del contenedor */
+  }
+  
 
 /* Estilo de los botones de navegación */
 .nav-button {
